--- a/sentry/static/description/index.html
+++ b/sentry/static/description/index.html
@@ -487,7 +487,7 @@ configured by prepending the argument name with <em>sentry_</em> in your Odoo co
 file. Currently supported additional client arguments are: <tt class="docutils literal">include_local_variables,
 max_breadcrumbs, release, environment, server_name, shutdown_timeout,
 in_app_include, in_app_exclude, default_integrations, dist, sample_rate,
-send_default_pii, http_proxy, https_proxy, max_request_body_size, debug,
+send_default_pii, http_proxy, https_proxy, request_bodies, debug,
 attach_stacktrace, ca_certs, propagate_traces, traces_sample_rate,
 auto_enabling_integrations</tt>.</p>
 <div class="section" id="example-odoo-configuration">
